# gravitySimulation

./: .gitignore  CMakeLists.txt  Gravity.sln  Gravity.vcxproj  Gravity.vcxproj.filters  celestialBody.cpp  celestialBody.h  main.cpp
shaders/: shader.vs
src/: buffers.cpp  buffers.h  glad.c  glad.h  shaders.cpp  shaders.h
